<resources>
    <string name="app_name">Perto de Mim</string>
    <string name="redefinir_senha"><u>Redefinir senha</u></string>
    <string name="seu_usuario">\@usuario</string>
    <string name="cadastro_fornecedor">Cadastro Fornecedor</string>
    <string name="divulgue_servicos">Divulgue seus serviços</string>
    <string name="dados_empresa">Dados da Empresa</string>
    <string name="nome_fantasia">Nome Fantasia</string>
    <string name="razao_social">Razão Social</string>
    <string name="cnpj">CNPJ/CPF</string>
    <string name="categoria">Categoria</string>
    <string name="selecione_categoria">Selecione uma categoria</string>
    <string name="filtros">Filtros</string>
    <string name="preco">Preço</string>
    <string name="distancia">Distância</string>
    <string name="avaliacao">Avaliação</string>
    <string name="todos">Todos</string>
    <string name="qualquer">Qualquer</string>
    <string name="todas">Todas</string>
    <string name="mensagens">Mensagens</string>
    <string name="buscar_conversas">Buscar conversas...</string>
    <string name="minimo">Mínimo</string>
    <string name="maximo">Máximo</string>
    <string name="hint_min_preco">R$ 0</string>
    <string name="hint_max_preco">R$ 10.000</string>
    <string name="hint_min_dist">0 km</string>
    <string name="hint_max_dist">5 km</string>
    <string name="descricao_servicos">Descrição dos Serviços</string>
    <string name="contato">Contato</string>
    <string name="email">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="instagram">Instagram</string>
    <string name="endereco">Endereço</string>
    <string name="cep">CEP</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="horario_funcionamento">Horário de Funcionamento</string>
    <string name="abertura">Abertura</string>
    <string name="fechamento">Fechamento</string>
    <string name="dias_funcionamento">Dias de Funcionamento</string>
    <string name="segunda">Segunda-feira</string>
    <string name="terca">Terça-feira</string>
    <string name="quarta">Quarta-feira</string>
    <string name="quinta">Quinta-feira</string>
    <string name="sexta">Sexta-feira</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="seguranca">Senha</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="mapa">Mapa</string>
    <string name="vitrine">Vitrine</string>
    <string name="chat">Chat</string>
    <string name="perfil">Perfil</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="cliente">Cliente</string>
    <string name="estatisticas">Estatísticas</string>
    <string name="servicos">Serviços</string>
    <string name="fornecedores">Fornecedores</string>
    <string name="avaliacao_label">Avaliação</string>
    <string name="endereco_principal">Endereço Principal</string>
    <string name="gerenciar_enderecos">Gerenciar endereços</string>
    <string name="historico_servicos">Histórico de Serviços</string>
    <string name="buscar_servicos">Buscar serviços&#8230;</string>
    <string name="error_required">*Campo obrigatório</string>
    <string name="error_invalid_email">*Email inválido</string>
    <string name="error_invalid_cpf">*CPF inválido</string>
    <string name="error_invalid_cnpj">*CNPJ inválido</string>
    <string name="error_invalid_cep">*CEP inválido</string>
    <string name="error_invalid_password">*Senha inválida</string>
    <string name="error_password_mismatch">*As senhas não coincidem</string>
    <string name="error_opening_time">*O horário de abertura deve ser antes de fechamento</string>
    <string name="error_closing_time">*O horário de fechamento deve ser depois de abertura</string>
    <string name="outra_categoria">Outra Categoria</string>
    <string name="adicionar_categoria">Adicionar categoria</string>
    <string name="verificar_codigo">Verificar Código</string>
    <string name="digite_codigo">Digite o código recebido</string>
    <string name="reenviar_email"><u>Reenviar e-mail</u></string>
    <string name="error_invalid_code">*Código incorreto</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="digite_nova_senha">Digite a nova senha</string>
    <string name="confirme_nova_senha">Confirme a nova senha</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="instrucoes_enviadas">Enviamos um código para seu e-mail</string>
    <string name="email_reenviado">E-mail reenviado com sucesso!</string>
    <string name="encontre_servicos">Encontre serviços próximos a você</string>
    <string name="email_usuario_obrig">E-mail*</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="senha_obrig">Senha*</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="entrar">Entrar</string>
    <string name="criar_conta_cliente">Criar conta como cliente</string>
    <string name="criar_conta_fornecedor">Criar conta como fornecedor</string>
    <string name="voltar">Voltar</string>
    <string name="codigo_obrig">Código*</string>
    <string name="digite_codigo_hint">Digite o código</string>
    <string name="verificar">Verificar</string>
    <string name="crie_nova_senha_desc">Crie uma nova senha para sua conta</string>
    <string name="nova_senha_obrig">Nova Senha*</string>
    <string name="confirma_nova_senha_obrig">Confirmar Senha*</string>
    <string name="nome_fantasia_obrig">Nome Fantasia*</string>
    <string name="razao_social_obrig">Razão Social*</string>
    <string name="cnpj_obrig">CNPJ/CPF*</string>
    <string name="cpf_obrig">CPF*</string>
    <string name="categoria_obrig">Categoria*</string>
    <string name="descricao_servicos_obrig">Descrição dos Serviços*</string>
    <string name="email_obrig">E-mail*</string>
    <string name="whatsapp_obrig">WhatsApp*</string>
    <string name="cep_obrig">CEP*</string>
    <string name="logradouro_obrig">Logradouro*</string>
    <string name="numero_obrig">Número*</string>
    <string name="bairro_obrig">Bairro*</string>
    <string name="cidade_obrig">Cidade*</string>
    <string name="estado_obrig">Estado*</string>
    <string name="dias_obrig">Dias da semana*</string>
    <string name="selecione_dias">Selecione os dias</string>
    <string name="abertura_obrig">Abertura*</string>
    <string name="fechamento_obrig">Fechamento*</string>
    <string name="confirmar_senha_obrig">Confirmar senha*</string>
    <string name="nome_completo_obrig">Nome completo*</string>
    <string name="data_nascimento_obrig">Data de Nascimento*</string>
    <string name="configuracoes">Configurações</string>
    <string name="notificacoes">Notificações</string>
    <string name="privacidade">Privacidade</string>
    <string name="ajuda_suporte">Ajuda e Suporte</string>
    <string name="sair_simples">Sair</string>
    <string name="vitrine_de_servicos">Vitrine de Serviços</string>
    <string name="imagem_do_servico">Imagem do Serviço</string>
    <string name="beleza_estetica">Beleza e Estética</string>
    <string name="tecnologia">Tecnologia</string>
    <string name="alimentacao">Alimentação</string>
    <string name="saude">Saúde</string>
    <string name="manutencao">Manutenção</string>
    <string name="educacao">Educação</string>
    <string name="perfil_do_fornecedor">Perfil do Fornecedor</string>
    <string name="servicos_oferecidos">Serviços Oferecidos</string>
    <string name="avaliacoes">Avaliações</string>
    <string name="enviar_mensagem">Enviar mensagem</string>
    <string name="contratar_servico">Contratar serviço</string>
    <string name="finalizar_agendamento">Agendar serviço</string>
    <string name="detalhes_do_servico">Detalhes do Serviço</string>
    <string name="agendamento">Agendamento</string>
    <string name="forma_de_pagamento">Forma de Pagamento</string>
    <string name="confirmar_agendamento">Finalizar agendamento</string>
    <string name="pedido_confirmado">Pedido Confirmado!</string>
    <string name="sucesso_agendamento">Seu agendamento foi realizado com sucesso</string>
    <string name="redirecionando">Redirecionando...</string>
    <string name="data">Data</string>
    <string name="horario">Horário</string>
    <string name="resumo_do_pedido">Resumo do Pedido</string>
    <string name="subtotal">Subtotal</string>
    <string name="taxa_servico">Taxa de serviço</string>
    <string name="total">Total</string>
    <string name="sair">Sair da Conta</string>
    <string name="selecionadas_lower">selecionadas</string>
    <string name="preferencias">Preferências</string>
    <string name="modo_escuro">Modo Escuro</string>
    <string name="idioma">Idioma</string>
    <string name="versao_app">Versão do Aplicativo</string>
    <string name="versao_valor">1.0.4 (Estável)</string>
    <string name="termos_servico">Termos de Serviço</string>
    <string name="excluir_conta">Excluir Conta</string>
    <string name="biometria">Entrar com Biometria</string>
    <string name="dispositivos">Dispositivos Conectados</string>
    <string name="conta">Conta</string>
    <string name="sobre">Sobre</string>
    <string name="excluir_confirm">Excluir</string>
    <string name="cancelar">Cancelar</string>
    <string name="delete_account_msg">Tem certeza que deseja excluir sua conta permanentemente? Esta ação não pode ser desfeita.</string>
    <string name="senha_atual">Senha Atual</string>
    <string name="nova_senha_label">Nova Senha</string>
    <string name="confirmar_nova_senha_label">Confirmar Nova Senha</string>
    <string name="digite_senha_atual">Digite sua senha atual</string>
    <string name="salvar_senha">Salvar Nova Senha</string>
    <string name="editar_endereco">Editar endereço</string>
    <string name="adicionar_novo_endereco">Adicionar novo endereço</string>
    <string name="identificacao_label">Identificação (ex: Casa, Trabalho)</string>
    <string name="hint_label">Ex: Minha Casa</string>
    <string name="logradouro_label">Logradouro</string>
    <string name="hint_logradouro">Rua, Avenida, etc.</string>
    <string name="bairro_label">Bairro</string>
    <string name="hint_bairro">Centro</string>
    <string name="hint_cidade">Ex: São Paulo</string>
    <string name="hint_estado">SP</string>
    <string name="salvar_endereco">Salvar Endereço</string>
    <string name="editar_endereco_title">Editar Endereço</string>
    <string name="novo_endereco_title">Novo Endereço</string>
    <string name="seus_enderecos">Seus Endereços</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="salvar_alteracoes">Salvar Alterações</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="cpf">CPF</string>
</resources>